# better-bulletin

./: .gitignore
backend/: bulletin-v1.db  index.back.js  index.js  package-lock.json  package.json  pnpm-lock.yaml
frontend/: .eslintrc.cjs  index.html  package.json  pnpm-lock.yaml  tailwind.config.js
frontend/src/: App.tsx  index.css  main.tsx  util.ts
frontend/src/components/: CoursePage.tsx  Header.tsx  Landing.tsx
scraper/: Cargo.toml  tables.sql
scraper/src/: main.rs  scrape.rs  utility.rs
src/: bulletin.rs  database.rs
