[package]
name = "scrapper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.1.0"
ego-tree = "0.6.2"
libsql-client = { version = "0.33.4", features = [ "local_backend" ] }
scraper = "0.18.1"
serde = "1.0.197"
ureq = "2.9.6"
